--- a/ch02/templates/first-template.html
+++ b/ch02/templates/first-template.html
@@ -1,18 +1,11 @@
 <html>
-<head>
-  <meta charset="utf-8"></meta>
-
-  <title>First Template</title>
-
-  <link
-    rel="stylesheet"
-    href="/static/stylesheets/main.css"
-  ></link>
-</head>
-
-<body>
-  <h1>Hello {{.Name}}!</h1>
-
-  Your Id is {{.Id}}
-</body>
+              <head>
+                <meta charset="utf-8">
+                <title>First Template</title>
+                <link rel="stylesheet" href="/static/css/main.css">
+              </head>
+              <body>
+                <h1>Hello {{.Name}}!</h1>
+                Your Id is {{.Id}}
+              </body>
 </html>
